--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>Calendar widget</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="calendar-container"></div>
+    <!-- <script type="module" src="/src/main.tsx"></script> -->
+    <!-- Załaduj widget z CDN -->
+    <!-- <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.production.min.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+    ></script> -->
+    <script src="./dist/calendpay-widget.umd.js"></script>
+    <script>
+      CalendpayWidget.renderCalendarWidget({
+        containerId: "calendar-container",
+        productId: "12347",
+        organizationId: "abcde",
+      });
+    </script>
   </body>
 </html>
