--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
     ></script> -->
-    <script src="./dist/calendpay-widget.umd.js"></script>
+    <!-- <script src="./dist/calendpay-widget.umd.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/Calendpay/calendar-widget@main/dist/calendpay-widget.umd.js"></script>
     <script>
       CalendpayWidget.renderCalendarWidget({
         containerId: "calendar-container",
