--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div id="calendar-container"></div>
     <!-- <script type="module" src="/src/main.tsx"></script> -->
     <!-- Załaduj widget z CDN -->
-    <!-- <script
+    <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.production.min.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
-    ></script> -->
+    ></script>
     <script src="./dist/calendpay-widget.umd.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/gh/Calendpay/calendar-widget@main/dist/calendpay-widget.umd.js"></script> -->
     <script>
