--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar widget</title>
+    <!-- <link rel="stylesheet" href="./dist/style.css" /> -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body>
     <div id="calendar-container"></div>
-    <!-- <script type="module" src="/src/main.tsx"></script> -->
-    <!-- Załaduj widget z CDN -->
-    <!-- <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.production.min.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
-    ></script> -->
-    <!-- <script src="./dist/calendpay-widget.umd.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/gh/Calendpay/calendar-widget@main/dist/calendpay-widget.umd.js"></script>
+
+    <script src="./dist/calendar-widget.umd.js"></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/gh/Calendpay/calendar-widget@main/dist/calendar-widget.umd.js"></script> -->
     <script>
-      CalendpayWidget.renderCalendarWidget({
+      CalendarWidget.renderCalendarWidget({
         containerId: "calendar-container",
-        productId: "12347",
-        organizationId: "abcde",
+        productSlug: "konsultacja-kontrolna",
+        organizationSlug: "silownia-xyz",
       });
     </script>
   </body>
